--- a/.github/workflows/windows-installer.yml
+++ b/.github/workflows/windows-installer.yml
@@ -1,4 +1,4 @@
-name: Windows Installer
+name: Windows installer
 
 on: [push, pull_request]
 
@@ -46,8 +46,11 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/*
+          files: |
+            dist/*.7z
+            dist/*.exe
           draft: true
 
   llvm:
@@ -90,8 +93,10 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/*
+          files: |
+            dist/*.exe
           draft: true
 
   xp:
@@ -141,6 +146,9 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/*
+          files: |
+            dist/*.7z
+            dist/*.exe
           draft: true
