--- a/packages/archlinux/PKGBUILD.in
+++ b/packages/archlinux/PKGBUILD.in
@@ -7,7 +7,7 @@ arch=('i686' 'pentium4' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64' 'riscv64')
 url="https://github.com/royqh1979/$_pkgname"
 license=('GPL3')
 depends=(qt6-base qt6-svg gcc gdb astyle)
-makedepends=(qt6-tools imagemagick librsvg)
+makedepends=(qt6-tools cmake imagemagick librsvg)
 optdepends=(
     'clang: C/C++ compiler (alternative)'
 )
@@ -22,17 +22,14 @@ sha256sums=(
     'SKIP'
 )
 
-prepare() {
-    sed -i '/CONFIG += ENABLE_LUA_ADDON/ { s/^#\s*// }' RedPanda-CPP/RedPandaIDE/RedPandaIDE.pro
-}
-
 build() {
     mkdir redpanda-build
     cd redpanda-build
-    qmake6 \
-        PREFIX='/usr' \
-        LIBEXECDIR='lib' \
-        "$srcdir/$_pkgname/Red_Panda_CPP.pro"
+    cmake -S "$srcdir/$_pkgname" -B . \
+        -G "Unix Makefiles" \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DCMAKE_INSTALL_LIBEXECDIR=lib
     make
 }
 
@@ -41,7 +38,7 @@ package() {
     install -Dm644 "compiler_hint.lua" "$_libexecdir/compiler_hint.lua"
 
     cd redpanda-build
-    make INSTALL_ROOT="$pkgdir" install
+    make DESTDIR="$pkgdir" install
 
     for size in 16 22 24 32 36 48 64 72 96 128 192 256 512; do
         mkdir -p "$pkgdir/usr/share/icons/hicolor/${size}x${size}/apps"
