--- a/packages/alpine/APKBUILD.in
+++ b/packages/alpine/APKBUILD.in
@@ -6,8 +6,8 @@ pkgdesc='A fast, lightweight, open source, and cross platform C++ IDE (developme
 arch='all'
 url="https://github.com/royqh1979/$_pkgname"
 license='GPL-3.0'
-depends='qt5-qtbase qt5-qtsvg gcc g++ gdb astyle'
-makedepends='qt5-qtbase-dev qt5-qtsvg-dev qt5-qttools-dev'
+depends='qt6-qtbase qt6-qtsvg gcc g++ gdb astyle'
+makedepends='qt6-qtbase-dev qt6-qtsvg-dev qt6-qttools-dev cmake'
 provides='redpanda-cpp'
 source="$_pkgname.tar.gz"
 options='!check'
@@ -15,15 +15,16 @@ options='!check'
 build() {
     mkdir "$srcdir/redpanda-build"
     cd "$srcdir/redpanda-build"
-    qmake-qt5 \
-        PREFIX='/usr' \
-        "$srcdir/$_pkgname/Red_Panda_CPP.pro"
+    cmake -S "$srcdir/$_pkgname" -B . \
+        -G "Unix Makefiles" \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX=/usr
     make
 }
 
 package() {
     cd "$srcdir/redpanda-build"
-    make INSTALL_ROOT="$pkgdir" install
+    make DESTDIR="$pkgdir" install
 }
 
 sha512sums="00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 $_pkgname.tar.gz"
