--- a/packages/debian/control
+++ b/packages/debian/control
@@ -3,23 +3,25 @@ Section: devel
 Priority: optional
 Maintainer: royqh1979@gmail.com
 Build-Depends: debhelper (>= 12~),
-	       qtbase5-dev,
-               qtbase5-dev-tools,
-	       qttools5-dev-tools,
-               libqt5svg5-dev
+               qt6-base-dev,
+               qt6-base-dev-tools,
+               qt6-tools-dev,
+               qt6-tools-dev-tools,
+               qt6-svg-dev,
+               cmake
 Standards-Version: 4.3.0
 Homepage: https://github.com/royqh1979/RedPanda-CPP
 
 Package: redpanda-cpp
 Architecture: any
 Depends: ${shlibs:Depends},
-	 ${misc:Depends},
-	 gcc,
-	 g++,
-	 make,
-	 gdb,
-	 gdbserver,
-	 astyle
+         ${misc:Depends},
+         gcc,
+         g++,
+         make,
+         gdb,
+         gdbserver,
+         astyle
 Recommends: qterminal | konsole | gnome-terminal | terminator | lxterminal | mate-terminal | terminology | xfce4-terminal | alacritty | cool-retro-term | kitty | sakura | termit | tilix
 Description: A lightweight but powerful C/C++ IDE
  Red Panda C++ (Old name Red Panda Dev-C++ 7) is a full featured C/C++ IDE.
